# circlepackage

./: LICENSE  README.md  setup.cfg
src/circle_mastri/: calculate.py
tests/: test_calculate.py
