[metadata]
name = circle-mastri
version = 0.0.2
author = Marion Claudia Striž
author_email = mastri@ttu.ee
description = A small package for calculating the area and circumference of a circle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marionstriz/circlepackage.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src